# ian-aws-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/claude/ian-aws-audit/: SKILL.md
skills/cursor/: ian-aws-audit.mdc
src/ian_aws_audit/: __main__.py  anthropic_client.py  inventory.py  mermaid.py  prompt.py  renderer.py
src/ian_aws_audit/_skills/claude/: SKILL.md
src/ian_aws_audit/_skills/cursor/: ian-aws-audit.mdc
