[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ian-aws-audit"
version = "0.1.2"
description = "BYOK AWS account audit — one command, markdown report, works inside Claude Code and Cursor."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Lucia Clifford" }]
keywords = ["aws", "audit", "claude", "cursor", "devops", "byok"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "boto3>=1.34",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
ian-aws-audit = "ian_aws_audit.__main__:main"

[project.urls]
Homepage = "https://github.com/lucia/ian-aws-audit"
Issues = "https://github.com/lucia/ian-aws-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ian_aws_audit"]

[tool.ruff]
line-length = 100
target-version = "py310"
